tests/ui/feature-gates/feature-gate-naked_functions.stderr
error[E0658]: use of unstable library feature `naked_functions`
  --> $DIR/feature-gate-naked_functions.rs:9:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `naked_functions`
  --> $DIR/feature-gate-naked_functions.rs:16:5
   |
LL |     naked_asm!("")
   |     ^^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: unsafe attribute used without unsafe
  --> $DIR/feature-gate-naked_functions.rs:6:3
   |
LL | #[naked]
   |   ^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
LL | #[unsafe(naked)]
   |   +++++++     +

error: unsafe attribute used without unsafe
  --> $DIR/feature-gate-naked_functions.rs:13:3
   |
LL | #[naked]
   |   ^^^^^ usage of unsafe attribute
   |
help: wrap the attribute in `unsafe(...)`
   |
LL | #[unsafe(naked)]
   |   +++++++     +

error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:6:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:13:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `naked_functions`
  --> $DIR/feature-gate-naked_functions.rs:3:5
   |
LL | use std::arch::naked_asm;
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
